<resources>
    <string name="app_name">Habit Pro</string>
    <string name="dias_consecutivos">Dias Consecutivos</string>
    <string name="salir_a_correr">Salir a correr</string>
    <string name="jueves">Jueves</string>
    <string name="hoy">HOY</string>
    <string name="tus_habitos">Tus Habitos</string>
    <string name="a_adir_nuevo_habito">Añadir nuevo Habito</string>
    <string name="idioma">Idioma</string>
    <string name="brillo">Brillo</string>
    <string name="tama_o_texto">Tamaño texto</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="permisos">Permisos</string>
    <string name="acceder_a_im_genes">Acceder a imágenes</string>
    <string name="conectarse_a_internet">Conectarse a internet</string>
    <string name="conectarse_con_calendario">Conectarse con calendario</string>
    <string name="tiempo_total">Tiempo total</string>
    <string name="_0">0%</string>
    <string name="resumen">Resumen</string>
    <string name="recu_rdame">Recuérdame</string>
    <string name="descripci_n_del_h_bito">Descripción del Hábito</string>
    <string name="progreso_0">Progreso: 0%</string>
    <string name="estado_en_progreso">Estado: En progreso</string>
    <string name="desde_fecha_inicio_hasta_fecha_fin">Desde: Fecha Inicio Hasta: Fecha Fin</string>
    <string name="tiempo_estimado_0_min">Tiempo estimado: 0 min</string>
    <string name="calendario">Calendario</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="has_olvidado_la_contrase_a">¿Has olvidado la contraseña?</string>
    <string name="no_tienes_una_cuenta_reg_strate">¿No tienes una cuenta? Regístrate</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="nombre_gmail_com">nombre@gmail.com</string>
    <string name="_666118098">666118098</string>
    <string name="editar_informaci_n">Editar información</string>
    <string name="crear_h_bito">Crear Hábito</string>
    <string name="guardar">Guardar</string>
    <string name="nombre_del_h_bito">Nombre del hábito</string>
    <string name="ej_leer_hacer_ejercicio">Ej. Leer, Hacer ejercicio</string>
    <string name="descripci_n">Descripción</string>
    <string name="describe_el_h_bito">Describe el hábito</string>
    <string name="selecciona_una_imagen">Selecciona una imagen</string>
    <string name="cu_ndo_lo_realizar_s">¿Cuándo lo realizarás?</string>
    <string name="editar">Editar</string>
    <string name="selecionar_nueva_imagen">Selecionar nueva Imagen</string>
    <string name="editar_nombre_del_habito">Editar Nombre del Habito</string>
    <string name="editar_descripci_n">Editar Descripción</string>
    <string name="editar_objetivo">Editar Objetivo</string>
    <string name="editar_fecha_de_inicio">Editar Fecha de inicio</string>
    <string name="editar_fecha_de_fin">Editar Fecha de fin</string>
    <string name="selecciona_la_fecha">Selecciona la fecha</string>
    <string name="noche">Noche</string>
    <string name="tarde">Tarde</string>
    <string name="ma_ana">Mañana</string>
    <string name="ej_leer_30_p_ginas">Ej. Leer 30 páginas</string>
    <string name="eliminando_h_bito">Eliminando hábito...</string>
    <string name="editar_habito">Editar Habito</string>
    <string name="fecha_de_inicio">Fecha de inicio</string>
    <string name="guardar_datos">Guardar Datos</string>
    <string name="resetear_datos">Resetear Datos</string>


    <string-array name="idiomas">
        <item>Español</item>
        <item>Català</item>
        <item>English</item>
        <item>Français</item>
    </string-array>

</resources>