<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CrearHabito">

    <LinearLayout
        android:id="@+id/toolbarContainer"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="60dp"
            android:layout_height="56dp"
            android:layout_marginEnd="240dp"
            android:title="@string/crear_h_bito"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:titleTextColor="@android:color/white" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/editar" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
        android:padding="16dp">

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/containerNombreHabito"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar_nombre_del_habito"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etNombreHabito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ej_leer_hacer_ejercicio" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/selecionar_nueva_imagen"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/menu_background">

                <ImageView
                    android:id="@+id/ivSeleccionarImagen"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/subir_imagen" />
            </FrameLayout>


            <LinearLayout
                android:id="@+id/containerDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar_descripci_n"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/describe_el_h_bito"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerObjetivo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar_objetivo"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etObjetivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ej_leer_30_p_ginas" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerRadioButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="0"
                    android:layout_height="wrap_content"
                    android:text="@string/cu_ndo_lo_realizar_s"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgMomentoDia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbManana"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ma_ana" />

                    <RadioButton
                        android:id="@+id/rbTarde"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/tarde" />

                    <RadioButton
                        android:id="@+id/rbNoche"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/noche" />


                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar_fecha_de_inicio"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etFechaInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/selecciona_la_fecha" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar_fecha_de_fin"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etFechaFin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/selecciona_la_fecha" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>